Commit for new computer